added setvars in gh actions

--- a/.github/workflows/nuget-package-publish.yml
+++ b/.github/workflows/nuget-package-publish.yml
@@ -19,7 +19,7 @@ env:
   CSPROJ_PATH: src/RuleFilterParser/RuleFilterParser.csproj
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
 
     steps:
