--- a/.github/workflows/nuget-package-publish.yml
+++ b/.github/workflows/nuget-package-publish.yml
@@ -43,10 +43,11 @@ jobs:
           fi
           
       - name: Run Tests
-        run: dotnet test ${{ env.CSPROJ_PATH }}
+        run: dotnet test
 
       - name: Package
         run: dotnet pack -p:PackageVersion=${{ env.VERSION }} -c Release -o . ${{ env.CSPROJ_PATH }}
 
       - name: Publish
-        run: dotnet nuget push *.nupkg -k ${{env.API_KEY}} -s https://api.nuget.org/v3/index.json
+        run: dotnet nuget push *.nupkg -k ${{ env.API_KEY }} -s https://api.nuget.org/v3/index.json
+        
