--- a/.github/workflows/nuget-package-publish.yml
+++ b/.github/workflows/nuget-package-publish.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Set package version
         run: |
-          if [[ $GITHUB_REF == 'refs/heads/master' && $GITHUB_EVENT_NAME == 'push' ]]; then
+          if [[ $GITHUB_REF == 'refs/heads/main' && $GITHUB_EVENT_NAME == 'push' ]]; then
              echo "VERSION=${{ env.NUGET_PACKAGE_VERSION_BASE }}.${{ github.run_number}}" >> "$GITHUB_ENV"
           else
              echo "VERSION=${{ env.NUGET_PACKAGE_VERSION_BASE }}.${{ github.run_number}}-beta" >> "$GITHUB_ENV"
@@ -49,5 +49,5 @@ jobs:
         run: dotnet pack -p:PackageVersion=${{ env.VERSION }} -c Release -o . ${{ env.CSPROJ_PATH }}
 
       - name: Publish
-        run: dotnet nuget push *.nupkg -k ${{ env.API_KEY }} -s "https://api.nuget.org/v3/index.json"
+        run: dotnet nuget push *.nupkg -k ${{ env.API_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate
         
