--- a/src/RuleFilterParser/RuleFilterParser.csproj
+++ b/src/RuleFilterParser/RuleFilterParser.csproj
@@ -4,6 +4,9 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+
+        <PackageId>BccCode.RuleFilterParser</PackageId>
+        <Description>Parsing directus filters to LINQ</Description>
     </PropertyGroup>
 
     <ItemGroup>
