example with postgres db

--- a/RuleFilterParser.Examples.IQueryable/appsettings.json
+++ b/RuleFilterParser.Examples.IQueryable/appsettings.json
@@ -2,8 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Database": {
+    "UseInMemoryDatabase": true,
+    "Postgres": "Host=localhost;Port=5555;Database=RuleFilterParserExample;Username=postgres-admin;Password=password"
+  }
 }
