example project location fix

--- a/examples/RuleFilterParser.Examples.IQueryable/RuleFilterParser.Examples.IQueryable.csproj
+++ b/examples/RuleFilterParser.Examples.IQueryable/RuleFilterParser.Examples.IQueryable.csproj
@@ -18,7 +18,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\RuleFilterParser\RuleFilterParser.csproj" />
+      <ProjectReference Include="..\..\src\RuleFilterParser\RuleFilterParser.csproj" />
     </ItemGroup>
-
 </Project>
