added datetime to example

--- a/examples/RuleFilterParser.Examples.IQueryable/appsettings.json
+++ b/examples/RuleFilterParser.Examples.IQueryable/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "UseInMemoryDatabase": true,
+    "UseInMemoryDatabase": false,
     "Postgres": "Host=localhost;Port=5555;Database=RuleFilterParserExample;Username=postgres-admin;Password=password"
   }
 }
