- DirectusFilterBuilder - porting lib project to netstandard2.1

--- a/src/RuleFilterParser/RuleFilterParser.csproj
+++ b/src/RuleFilterParser/RuleFilterParser.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
         <PackageId>BccCode.RuleFilterParser</PackageId>
         <Description>Parsing directus filters to LINQ</Description>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
