--- a/tests/RuleFilterParser.Tests/RuleFilterParser.Tests.csproj
+++ b/tests/RuleFilterParser.Tests/RuleFilterParser.Tests.csproj
@@ -1,13 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
 
         <RootNamespace>RuleToLinqParser.Tests</RootNamespace>
+
+        <OutputType>Library</OutputType>
+
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
