--- a/.github/workflows/nuget-package-publish.yml
+++ b/.github/workflows/nuget-package-publish.yml
@@ -15,7 +15,7 @@ on:
   workflow_dispatch:
 
 env:
-  API_KEY: ${{ secrets.NUGET_API_KEY }}
+  API_KEY: ${{ secrets.NUGET_PACKAGES_GITHUB_API_KEY }}
   CSPROJ_PATH: src/RuleFilterParser/RuleFilterParser.csproj
 
 jobs:
