--- a/src/RuleFilterParser/RuleFilterParser.csproj
+++ b/src/RuleFilterParser/RuleFilterParser.csproj
@@ -11,7 +11,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Api\**" />
     </ItemGroup>
 
 </Project>
