--- a/.github/workflows/nuget-package-publish.yml
+++ b/.github/workflows/nuget-package-publish.yml
@@ -30,7 +30,9 @@ jobs:
           dotnet-version: 7.0.*
 
       - name: Running dotnet format
-        run: dotnet format
+        run: |
+          dotnet tool install -g dotnet-format --version "7.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet7/nuget/v3/index.json
+          dotnet format
 
       - name: Set Environment Variables
         uses: ./.github/actions/setvars
