--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -13,16 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 7.0.*
-
-      - name: Install dotnet-format tool
-        run: dotnet tool install -g dotnet-format
-
       - name: Check out code
         uses: actions/checkout@v2
 
+      - name: Add dotnet-format problem matcher
+        uses: xt0rted/dotnet-format-problem-matcher@v1
+
+      - name: Restore dotnet tools
+        uses: xt0rted/dotnet-tool-restore@v1
+
       - name: Run dotnet format
-        run: dotnet format --verbosity diagnostic
+        uses: xt0rted/dotnet-format@v1
+        with:
+          only-changed-files: "true"
