--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -1,11 +1,6 @@
 name: Code analysis
 
-on:
-  pull_request:
-    paths:
-      - "**.cs"
-      - ".editorconfig"
-  workflow_dispatch:
+on: pull_request
 
 jobs:
   check-format:
