--- a/tests/BccCode.Linq.Tests/BccCode.Linq.Tests.csproj
+++ b/tests/BccCode.Linq.Tests/BccCode.Linq.Tests.csproj
@@ -7,7 +7,7 @@
 
         <IsPackable>false</IsPackable>
 
-        <RootNamespace>RuleToLinqParser.Tests</RootNamespace>
+        <RootNamespace>BccCode.Linq.Tests</RootNamespace>
 
         <OutputType>Library</OutputType>
 
