--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -17,6 +17,4 @@ jobs:
         uses: xt0rted/dotnet-tool-restore@v1.0.1
 
       - name: Run dotnet format
-        uses: xt0rted/dotnet-format@v1.2.0
-        with:
-          only-changed-files: "true"
+        run: dotnet format
