--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -18,3 +18,18 @@ jobs:
 
       - name: Run dotnet format
         run: dotnet format
+
+      - name: Check for changes
+        id: git-check
+        run: |
+          git diff --exit-code || echo "changes=True" >> $GITHUB_ENV
+        continue-on-error: true
+
+      - name: Commit and push changes
+        if: env.changes == 'True'
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add -A
+          git commit -m "Apply dotnet format changes"
+          git push
